# HeCRM

./: .gitignore  LICENSE  README.md
backend/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: accounts.py  contacts.py  opportunities.py  products.py  salesorders.py
backend/app/dynamics/: __init__.py  auth.py  client.py  errors.py
backend/app/schemas/: account.py  common.py  contact.py  opportunity.py  product.py  salesorder.py
backend/scripts/: seed.py
backend/tests/: conftest.py
docs/: DYNAMICS_INTEGRATION.md  SALES_PROCESS.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/hooks/: queries.ts
frontend/src/lib/: api.ts  format.ts  stages.ts  types.ts
frontend/src/pages/: AccountDetailPage.tsx  AccountsPage.tsx  DashboardPage.tsx  OpportunitiesPage.tsx  ProductsPage.tsx  SalesOrderDetailPage.tsx  SalesOrdersPage.tsx
tests/: .env.example  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/api/: accounts.api.spec.ts  opportunities.api.spec.ts  salesorders.api.spec.ts
tests/dataverse/: actions.dv.spec.ts  auth.dv.spec.ts  bindings.dv.spec.ts  errors.dv.spec.ts  schema.dv.spec.ts
tests/src/: context.ts
tests/src/clients/: AccountsApi.ts  ApiClient.ts  ContactsApi.ts  HeCrmApi.ts  (+5 more)
tests/ui/: accounts.ui.spec.ts  opportunities.ui.spec.ts  salesorders.ui.spec.ts
(+20 files in other folders)
